--- a/construction.html
+++ b/construction.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pntrmln - Főoldal</title>
+    <title>Fejlesztés alatt!</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +40,7 @@
 </head>
 <body onload="changeText()">
     <div>
-        <img src="media/working.gif" width="15%">
+        <img src="media/working.gif" width="15%" onclick="window.open('https://in.pinterest.com/pin/917889967809048798/')">
         <h1 id="ct"><i class="fa fa-wrench"></i> Website is under construction! <i class="fa fa-wrench"></i></h1>
     </div>
 </body>
