--- a/construction.html
+++ b/construction.html
@@ -12,7 +12,7 @@
         var magyar = false;
         function changeText(){
             if (!magyar) {
-                document.getElementById("ct").innerHTML = '<i class="fa fa-wrench"></i> Weboldal fejlesztés alatt <i class="fa fa-wrench"></i>';
+                document.getElementById("ct").innerHTML = '<i class="fa fa-wrench"></i> Weboldal fejlesztés alatt! <i class="fa fa-wrench"></i>';
                 magyar = true;
             } else {
                 document.getElementById("ct").innerHTML = '<i class="fa fa-wrench"></i> Website is under construction! <i class="fa fa-wrench"></i>';
