--- a/construction.html
+++ b/construction.html
@@ -8,39 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Color+Emoji&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <script>
-        var magyar = false;
-        function changeText(){
-            if (!magyar) {
-                document.getElementById("ct").innerHTML = '<i class="fa fa-wrench"></i> Weboldal fejlesztés alatt! <i class="fa fa-wrench"></i>';
-                magyar = true;
-            } else {
-                document.getElementById("ct").innerHTML = '<i class="fa fa-wrench"></i> Website is under construction! <i class="fa fa-wrench"></i>';
-                magyar = false;
-            }
-            setTimeout(changeText, 2000);
-        }
-    </script>
-    <style>
-        body{
-            background-color: #191919;
-        }
-        h1{
-            font-family: "Fira Sans", sans-serif;
-            text-align: center;
-            color: white;
-            vertical-align: middle;
-        }
-        div{
-        height: 100vh;
-        margin-top: calc(100vh / 2 - 150px);
-        text-align: center;
-        }
-    </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="js/construction.js"></script>
+    <link rel="stylesheet" href="css/construction.css">
 </head>
 <body onload="changeText()">
     <div>
-        <img src="media/working.gif" width="15%" onclick="window.open('https://in.pinterest.com/pin/917889967809048798/')">
+        <img src="media/working.gif" onclick="window.open('https://in.pinterest.com/pin/917889967809048798/')">
         <h1 id="ct"><i class="fa fa-wrench"></i> Website is under construction! <i class="fa fa-wrench"></i></h1>
     </div>
 </body>
