--- a/privacy.html
+++ b/privacy.html
@@ -14,16 +14,21 @@
     <script src="js/privacy.js"></script>
     <script src="js/all.js"></script>
 </head>
-<body onload="checkSettings()">
+<body onload="window.location.href='construction.html'">
     <nav class="navbar">
-        <a href="contact.html" class="nav-list"><span lang="hu">Kapcsolat</span><span lang="en">Contacts</span></a>
+        <a><i class="fa-solid fa-bars fa-2x" onclick="showMenu()" title="Menü"></i></a>
         <a href="index.html" id="main_a"><h3 id="n_main">Pntrmln<br>
         <p id="gh">.xyz</p></h3></a>
         <a><i class="fa-solid fa-language fa-2x" onclick="languageChange()" title="English | Magyar"></i></a>
     </nav>
+    <div class="navbar text-center" id="menupontok">
+        <a href="social.html"><i class="fa-solid fa-users"></i><br><p class="mpont_pc">Közösségi média</p></a>
+        <a href="anime.html"><img src="media/yui-btn.png" alt=""><br><p class="mpont_pc">Animék</p></a>
+        <a href="tz-osszefoglalok/index.html"><i class="fa-solid fa-file"></i><br><p class="mpont_pc">TZ összefoglalók</p></a>
+    </div>
     <main>
         <div id="tajekoztato" class="text-center mt-3" style="margin: auto; width: 70%;">
-            <h1><span lang="hu">Adatkezelési útmutató</span><span lang="en">Privacy Policy</span></h1>
+            <h1 id="mh1"><span lang="hu">Adatkezelési útmutató</span><span lang="en">Privacy Policy</span></h1>
             <hr style="color: red;">
             <h3><span lang="hu">Milyen adat van eltárolva az oldalon?</span><span lang="en">What data is stored on the website?</span></h3>
             <p><span lang="hu">Az oldal kizárólag az oldal beállításai kapcsán tárol adatokat HTML5 localStorage funkcióval. 
@@ -68,10 +73,13 @@
             </p>
         </div>
     </main>
-    <footer class="navbar">
-        <a href="" onclick="Settings('on', event)"><span lang="hu">Beállítások</span><span lang="en">Settings</span></a>
-        <h6><span lang="hu">Készítette: Pntrmln, 2025</span><span lang="en">Created by Pntrmln, 2025</span></h6>
-        <a href="privacy.html"><span lang="hu">Adatvédelem</span><span lang="en">Privacy</span></a>
+    <footer>
+        <h6><span lang="hu">Készítette: Pintér Milán, 2025</span><span lang="en">Created by Milán Pintér, 2025</span></h6>
+        <div class="navbar" id="footer_nav">
+            <a href="" onclick="Settings('on', event)"><i class="fa-solid fa-gear"></i></a>
+            <a href="contact.html"><i class="fa-solid fa-envelope"></i></a>
+            <a href="privacy.html"><i class="fa-solid fa-lock"></i></a>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
