--- a/tz-osszefoglalok/index.html
+++ b/tz-osszefoglalok/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TZ összefoglalók</title>
-    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Color+Emoji&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
@@ -13,22 +13,23 @@
     <link rel="stylesheet" href="../css/all.css">
     <link rel="stylesheet" href="tz-osszefoglalok.css">
     <script src="../js/all.js"></script>
+    <style>#mh1{margin-top: 15vh;}</style>
 </head>
 <body onload="checkSettings()">
     <nav class="navbar">
-        <a href="../contact.html" class="nav-list"><span lang="hu">Kapcsolat</span><span lang="en">Contacts</span></a>
+        <a><i class="fa-solid fa-bars fa-2x" onclick="showMenu()" title="Menü"></i></a>
         <a href="../index.html" id="main_a"><h3 id="n_main">Pntrmln<br>
         <p id="gh">.xyz</p></h3></a>
         <a><i class="fa-solid fa-language fa-2x" onclick="languageChange()" title="English | Magyar"></i></a>
     </nav>
+    <div class="navbar text-center" id="menupontok">
+        <a href="../social.html"><i class="fa-solid fa-users"></i><br><p class="mpont_pc">Közösségi média</p></a>
+        <a href="../anime.html"><img src="../media/yui-btn.png" alt=""><br><p class="mpont_pc">Animék</p></a>
+        <a href="../tz-osszefoglalok/index.html"><i class="fa-solid fa-file"></i><br><p class="mpont_pc">TZ összefoglalók</p></a>
+    </div>
     <main>
-        <div class="alert alert-warning text-center" role="alert" style="display: block;">
-            FIGYELEM!<br>
-            Ez az aloldal a főoldalról még nem elérhető. <br>
-            A telefonos felhasználói felület még kialakítás alatt! <br>
-        </div>
-        <div class="text-center mt-3">
-            <h1>Témazáró összefoglalók</h1>
+        <div class="text-center">
+            <h1 id="mh1">Témazáró összefoglalók</h1>
             <h3>Válassz tantárgyat!</h3>
 
             <div class="row" id="tantargyak">
@@ -37,10 +38,13 @@
             </div>
         </div>
     </main>
-    <footer class="navbar">
-        <a href="" onclick="Settings('on', event)"><span lang="hu">Beállítások</span><span lang="en">Settings</span></a>
-        <h6><span lang="hu">Készítette: Pntrmln, 2025</span><span lang="en">Created by Pntrmln, 2025</span></h6>
-        <a href="../privacy.html"><span lang="hu">Adatvédelem</span><span lang="en">Privacy</span></a>
+    <footer>
+        <h6><span lang="hu">Készítette: Pintér Milán, 2025</span><span lang="en">Created by Milán Pintér, 2025</span></h6>
+        <div class="navbar" id="footer_nav">
+            <a href="" onclick="Settings('on', event)"><i class="fa-solid fa-gear"></i></a>
+            <a href="../contact.html"><i class="fa-solid fa-envelope"></i></a>
+            <a href="../privacy.html"><i class="fa-solid fa-lock"></i></a>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
