--- a/anime.html
+++ b/anime.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.cdnfonts.com/css/tt-ramillas-trl" rel="stylesheet">
     <link href="https://db.onlinewebfonts.com/c/5f16a4773a8a064e3fb29ecb648ffcf5?family=Reforma+Grotesk+W01+Demi" rel="stylesheet">
 </head>
-<body onload="window.location.href='construction.html'">
+<body onload="checkSettings()">
     <nav class="navbar">
         <a><i class="fa-solid fa-bars fa-2x" onclick="showMenu()" title="Menü"></i></a>
         <a href="index.html" id="main_a"><h3 id="n_main">Pntrmln<br>
