--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/index.js"></script>
 </head>
-<body onload="window.location.href='construction.html'"> <!--onload="window.location.href='construction.html'"-->
+<body onload="checkSettings()"> <!--onload="window.location.href='construction.html'"-->
     <nav class="navbar">
         <a><i class="fa-solid fa-bars fa-2x" onclick="showMenu()" title="Menü"></i></a>
         <a href="" id="main_a"><h3 id="n_main">Pntrmln<br>
