--- a/privacy.html
+++ b/privacy.html
@@ -14,7 +14,7 @@
     <script src="js/privacy.js"></script>
     <script src="js/all.js"></script>
 </head>
-<body onload="window.location.href='construction.html'">
+<body onload="checkSettings()">
     <nav class="navbar">
         <a><i class="fa-solid fa-bars fa-2x" onclick="showMenu()" title="Menü"></i></a>
         <a href="index.html" id="main_a"><h3 id="n_main">Pntrmln<br>
