--- a/tz-osszefoglalok/index.html
+++ b/tz-osszefoglalok/index.html
@@ -25,7 +25,7 @@
     </nav>
     <div class="navbar text-center" id="menupontok">
         <a href="../social.html"><i class="fa-solid fa-users"></i><br><p class="mpont_pc">Közösségi média</p></a>
-        <a href="../anime.html"><img src="../media/yui-btn.png" alt=""><br><p class="mpont_pc">Animék</p></a>
+        <a href="../anime.html"><img src="../media/yui-btn.png" alt="" data-no-preview><br><p class="mpont_pc">Animék</p></a>
         <a href="../tz-osszefoglalok/index.html"><i class="fa-solid fa-file"></i><br><p class="mpont_pc">TZ összefoglalók</p></a>
     </div>
     <main>
@@ -51,3 +51,4 @@
 </body>
 
 </html>
+
