--- a/anime.html
+++ b/anime.html
@@ -12,7 +12,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/anime.css">    
-    <script src="js/all.js"></script>
     <!---Anime fontok-->
     <link href="https://db.onlinewebfonts.com/c/520f03efe23f38d1285d821e56387c66?family=CCWallScrawler+Bold+Italic" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/ditty" rel="stylesheet">
@@ -29,7 +28,7 @@
     </nav>
     <div class="navbar text-center" id="menupontok">
         <a href="social.html"><i class="fa-solid fa-users"></i><br><p class="mpont_pc">Közösségi média</p></a>
-        <a href="anime.html"><img src="media/yui-btn.png" alt=""><br><p class="mpont_pc">Animék</p></a>
+        <a href="anime.html"><img id="yui_image" alt=""><br><p class="mpont_pc">Animék</p></a>
         <a href="tz-osszefoglalok/index.html"><i class="fa-solid fa-file"></i><br><p class="mpont_pc">TZ összefoglalók</p></a>
     </div>
     <main>
@@ -158,6 +157,7 @@
             <a href="privacy.html"><i class="fa-solid fa-lock"></i></a>
         </div>
     </footer>
+    <script src="js/all.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
