--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Color+Emoji&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/index.js"></script>
 </head>
 <body onload="checkSettings()"> <!--onload="window.location.href='construction.html'"-->
     <nav class="navbar">
@@ -23,7 +21,7 @@
     </nav>
     <div class="navbar text-center" id="menupontok">
         <a href="social.html"><i class="fa-solid fa-users"></i><br><p class="mpont_pc">Közösségi média</p></a>
-        <a href="anime.html"><img src="media/yui-btn.png" alt=""><br><p class="mpont_pc">Animék</p></a>
+        <a href="anime.html"><img id="yui_image" alt=""><br><p class="mpont_pc">Animék</p></a>
         <a href="tz-osszefoglalok/index.html"><i class="fa-solid fa-file"></i><br><p class="mpont_pc">TZ összefoglalók</p></a>
     </div>
     <main class="text-center mt-3">
@@ -86,7 +84,9 @@
             <a href="privacy.html"><i class="fa-solid fa-lock"></i></a>
         </div>
     </footer>
-    <script src="js/all.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="js/all.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
