--- a/social.html
+++ b/social.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/social.css">
     <script src="js/social.js"></script>
-    <script src="js/all.js"></script>
 </head>
 <body onload="checkSettings()">
     <nav class="navbar">
@@ -25,7 +24,7 @@
     </nav>
     <div class="navbar text-center" id="menupontok">
         <a href="social.html"><i class="fa-solid fa-users"></i><br><p class="mpont_pc">Közösségi média</p></a>
-        <a href="anime.html"><img src="media/yui-btn.png" alt=""><br><p class="mpont_pc">Animék</p></a>
+        <a href="anime.html"><img id="yui_image" alt=""><br><p class="mpont_pc">Animék</p></a>
         <a href="tz-osszefoglalok/index.html"><i class="fa-solid fa-file"></i><br><p class="mpont_pc">TZ összefoglalók</p></a>
     </div>
     <main>
@@ -67,5 +66,6 @@
             <a href="privacy.html"><i class="fa-solid fa-lock"></i></a>
         </div>
     </footer>
+    <script src="js/all.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
