Add site: Anime V1.1/2
og:image próba

--- a/anime.html
+++ b/anime.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://pntrmln.xyz/media/yui_img.png">
     <title>Animék amiket megnéztem</title>
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
