--- a/tz-osszefoglalok/tortenelem.html
+++ b/tz-osszefoglalok/tortenelem.html
@@ -30,11 +30,12 @@
         <div class="text-center">
             <h1 id="mh1">Történelem</h1>
         </div>
-        <section class="mt-5 text-center">
+        <section class="mt-5 text-center" id="fsect">
             <div class="dropdown">
                 <h4 id="jtnh4" onclick="showDropdown('jtn')">Jelenlegi tanév:<i class="fa-solid fa-caret-down"></i></h4>
-                <div class="dropdown-content text-center" id="jtn_content">
+                <div class="dropdown-content" id="jtn_content">
                     <h5 onclick="createFileExplorer(this)">A dualizmus kora</h5>
+                    <h5 onclick="createFileExplorer(this)">Az I. világháború és következményei</h5>
                 </div>
             </div>
         </section>
