--- a/privacy.html
+++ b/privacy.html
@@ -15,16 +15,7 @@
 </head>
 <body onload="checkSettings()">
     <nav class="navbar">
-        <a><i class="fa-solid fa-bars fa-2x" onclick="showMenu()" title="Menü"></i></a>
-        <a href="index.html" id="main_a"><h3 id="n_main">Pntrmln<br>
-        <p id="gh">.xyz</p></h3></a>
-        <a><i class="fa-solid fa-language fa-2x" onclick="languageChange()" title="English | Magyar"></i></a>
     </nav>
-    <div class="navbar text-center" id="menupontok">
-        <a href="social.html"><i class="fa-solid fa-users"></i><br><p class="mpont_pc">Közösségi média</p></a>
-        <a href="anime.html"><img id="yui_image" alt=""><br><p class="mpont_pc">Animék</p></a>
-        <a href="tz-osszefoglalok/index.html"><i class="fa-solid fa-file"></i><br><p class="mpont_pc">TZ összefoglalók</p></a>
-    </div>
     <main>
         <div id="tajekoztato" class="text-center mt-3" style="margin: auto; width: 70%;">
             <h1 id="mh1"><span lang="hu">Adatkezelési útmutató</span><span lang="en">Privacy Policy</span></h1>
@@ -67,18 +58,12 @@
             <hr style="color: red">
             <h3><span lang="hu">További információra van szükséged?</span><span lang="en">Need more information?</span></h3>
             <p>
-                <span lang="hu">Lépj kapcsolatba velem a 'Kapcsolatok' oldalon található opciók egyikének használatával!</span>
-                <span lang="en">Contact me using one of the options listed on the 'Contacts' site.</span>
+                <span lang="hu">Lépj kapcsolatba velem a 'Linkek és kapcsolat' oldalon található opciók egyikének használatával!</span>
+                <span lang="en">Contact me using one of the options listed on the 'Links and contact' site.</span>
             </p>
         </div>
     </main>
     <footer>
-        <h6><span lang="hu">Készítette: Pintér Milán, 2025</span><span lang="en">Created by Milán Pintér, 2025</span></h6>
-        <div class="navbar" id="footer_nav">
-            <a href="" onclick="Settings('on', event)"><i class="fa-solid fa-gear"></i></a>
-            <a href="contact.html"><i class="fa-solid fa-envelope"></i></a>
-            <a href="privacy.html"><i class="fa-solid fa-lock"></i></a>
-        </div>
     </footer>
     <script src="js/all.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
