--- a/anime.html
+++ b/anime.html
@@ -19,22 +19,14 @@
     <link href="https://fonts.cdnfonts.com/css/coinage-caps-kruger-gray" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/tt-ramillas-trl" rel="stylesheet">
     <link href="https://db.onlinewebfonts.com/c/5f16a4773a8a064e3fb29ecb648ffcf5?family=Reforma+Grotesk+W01+Demi" rel="stylesheet">
+    <link href="https://db.onlinewebfonts.com/c/62aa3168ad67745e291a8f5c813ce505?family=BlackGrotesk+W08+Italic" rel="stylesheet">
 </head>
 <body onload="checkSettings()">
     <nav class="navbar">
-        <a><i class="fa-solid fa-bars fa-2x" onclick="showMenu()" title="Menü"></i></a>
-        <a href="index.html" id="main_a"><h3 id="n_main">Pntrmln<br>
-        <p id="gh">.xyz</p></h3></a>
-        <a><i class="fa-solid fa-language fa-2x" onclick="languageChange()" title="English | Magyar"></i></a>
     </nav>
-    <div class="navbar text-center" id="menupontok">
-        <a href="social.html"><i class="fa-solid fa-users"></i><br><p class="mpont_pc">Közösségi média</p></a>
-        <a href="anime.html"><img id="yui_image" alt=""><br><p class="mpont_pc">Animék</p></a>
-        <a href="tz-osszefoglalok/index.html"><i class="fa-solid fa-file"></i><br><p class="mpont_pc">TZ összefoglalók</p></a>
-    </div>
     <main>
         <div class="text-center mt-3">
-            <h2 id="mh2"><span lang="hu">Animék amiket megnéztem</span><span lang="en">Animes I watched</span></h2>
+            <h2 id="mh2" class="und_atmenet"><span lang="hu">Animék amiket megnéztem</span><span lang="en">Animes I watched</span></h2>
             <div style="margin: 50px;" id="tablazaton_kivul">
                 <hr style="color: red">
                 <div id="tdiv">
@@ -77,7 +69,7 @@
                     </tr>
                     <tr>
                         <td>2025.03.21. - 2025.04.24. <br>「S01-S03」</td>
-                        <td><span id="re">Re</span><span class="zero" id="kettospont">:</span><span class="zero">ZE</span><span class="zero" id="ro">RO</span><br id="rbr"><span id="rezero_title">- Starting Life in Another World - </span><br><span id="jpn">(Re:ゼロから始める異世界生活)</span></td>
+                        <td><span id="re">Re</span><span class="zero" id="kettospont">:</span><span class="zero">ZE</span><span class="zero" id="ro">RO</span><br id="rbr"><span id="rezero_title">- Starting Life in Another World - </span><span id="jpn">(Re:ゼロから始める異世界生活)</span></td>
                         <td><span lang="hu">Kaland, dark fantasy<br>(Isekai)</span><span lang="en">Adventure, dark fantasy (Isekai)</span></td>
                         <td><i class="fa-regular fa-head-side-speak"></i> ENG</td>
                         <td><span lang="hu">Igen, 4. évad. <br>「2026」</span><span lang="en">Yes, Season 4. <br>「2026」</span></td>
@@ -138,6 +130,13 @@
                         <td><i class="fa-regular fa-head-side-speak"></i> JPN + <i class="fa-regular fa-closed-captioning"></i> ENG
                         <td><i class="fa-regular fa-empty-set"></i></td>
                     </tr>
+                    <tr>
+                        <td>2025.11.01. - </td>
+                        <td id="nhktd"><span id="nhk">Welcome to the <br><span id="nhk2">N.H.K.</span></span><span id="jpn">(NHKにようこそ!)</span></td>
+                        <td><span lang="hu">Fekete komédia, pszichológiai dráma<br>(Shōnen)</span><span lang="en">Black comedy, psychological drama<br>(Shōnen)</span></td>
+                        <td><i class="fa-regular fa-head-side-speak"></i> ENG</td>
+                        <td><i class="fa-regular fa-empty-set"></i></td>
+                    </tr>
                 </table>
                 </div>
                 <br>
@@ -165,12 +164,6 @@
         </div>
     </main>
     <footer>
-        <h6><span lang="hu">Készítette: Pintér Milán, 2025</span><span lang="en">Created by Milán Pintér, 2025</span></h6>
-        <div class="navbar" id="footer_nav">
-            <a href="" onclick="Settings('on', event)"><i class="fa-solid fa-gear"></i></a>
-            <a href="contact.html"><i class="fa-solid fa-envelope"></i></a>
-            <a href="privacy.html"><i class="fa-solid fa-lock"></i></a>
-        </div>
     </footer>
     <script src="js/all.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
