--- a/social.html
+++ b/social.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Közösségi média</title>
+    <title>Linkek és kapcsolat</title>
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,25 +12,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/contact.css">
-    <link rel="stylesheet" href="css/social.css">
     <script src="js/social.js"></script>
 </head>
 <body onload="checkSettings()">
     <nav class="navbar">
-        <a><i class="fa-solid fa-bars fa-2x" onclick="showMenu()" title="Menü"></i></a>
-        <a href="index.html" id="main_a"><h3 id="n_main">Pntrmln<br>
-        <p id="gh">.xyz</p></h3></a>
-        <a><i class="fa-solid fa-language fa-2x" onclick="languageChange()" title="English | Magyar"></i></a>
     </nav>
-    <div class="navbar text-center" id="menupontok">
-        <a href="social.html"><i class="fa-solid fa-users"></i><br><p class="mpont_pc">Közösségi média</p></a>
-        <a href="anime.html"><img id="yui_image" alt=""><br><p class="mpont_pc">Animék</p></a>
-        <a href="tz-osszefoglalok/index.html"><i class="fa-solid fa-file"></i><br><p class="mpont_pc">TZ összefoglalók</p></a>
-    </div>
     <main>
         <div class="text-center">
-            <h1 id="mh1"><span lang="hu">Közösségi média</span><span lang="en">Social media</span></h1>
-            <h3><span lang="hu">Kattints az oldalaim megtekintéséhez:</span><span lang="en">Click to view my sites:</span></h3>
+            <h1 id="mh1" class="mb-5"><span lang="hu">Linkek és kapcsolat</span><span lang="en">Links and contact</span></h1>
             <div id="viz_des" class="mb-5">
                 <ul>
                     <li onclick="Redir('discord')"><i class="fa-brands fa-discord fa-2x"></i><br>Discord</li>
@@ -38,6 +27,8 @@
                     <li onclick="Redir('github')"><i class="fa-brands fa-github fa-2x"></i><br>GitHub</li>
                     <hr style="color: red;">
                     <li onclick="Redir('spotify')"><i class="fa-brands fa-spotify fa-2x"></i><br>Spotify</li>
+                    <hr style="color: red;">
+                    <li onclick="Redir('mail')"><i class="fa-solid fa-envelope fa-2x"></i><br>contact@pntrmln.hu</li>
                     <hr style="color: red;">
                     <li onclick="Redir('steam')"><i class="fa-brands fa-steam fa-2x"></i><br>Steam</li>
                     <hr style="color: red;">
@@ -47,10 +38,11 @@
                 </ul>
             </div>
             <div id="fuggo_des">
-                <ul>
+                <ul id="alahuzas">
                     <li onclick="Redir('discord')"><i class="fa-brands fa-discord fa-2x"></i><br>Discord</li>
                     <li onclick="Redir('github')"><i class="fa-brands fa-github fa-2x"></i><br>GitHub</li>
                     <li onclick="Redir('spotify')"><i class="fa-brands fa-spotify fa-2x"></i><br>Spotify</li>
+                    <li onclick="Redir('mail')"><i class="fa-solid fa-envelope fa-2x"></i><br>contact@pntrmln.hu</li>
                     <li onclick="Redir('steam')"><i class="fa-brands fa-steam fa-2x"></i><br>Steam</li>
                     <li onclick="Redir('instagram')"><i class="fa-brands fa-instagram fa-2x"></i><br>Instagram</li>
                     <li id="last_e" onclick="Redir('bunpro')"><img src="media/bunpro-logo3.png" alt="bunpro-logo"><br>Bunpro</li>
@@ -59,12 +51,6 @@
         </div>
     </main>
     <footer>
-        <h6><span lang="hu">Készítette: Pintér Milán, 2025</span><span lang="en">Created by Milán Pintér, 2025</span></h6>
-        <div class="navbar" id="footer_nav">
-            <a href="" onclick="Settings('on', event)"><i class="fa-solid fa-gear"></i></a>
-            <a href="contact.html"><i class="fa-solid fa-envelope"></i></a>
-            <a href="privacy.html"><i class="fa-solid fa-lock"></i></a>
-        </div>
     </footer>
     <script src="js/all.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
