--- a/tz-osszefoglalok/index.html
+++ b/tz-osszefoglalok/index.html
@@ -12,24 +12,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/all.css">
     <link rel="stylesheet" href="tz-osszefoglalok.css">
-    <script src="../js/all.js"></script>
     <style>#mh1{margin-top: 15vh;}</style>
 </head>
 <body onload="checkSettings()">
     <nav class="navbar">
-        <a><i class="fa-solid fa-bars fa-2x" onclick="showMenu()" title="Menü"></i></a>
-        <a href="../index.html" id="main_a"><h3 id="n_main">Pntrmln<br>
-        <p id="gh">.xyz</p></h3></a>
-        <a><i class="fa-solid fa-language fa-2x" onclick="languageChange()" title="English | Magyar"></i></a>
     </nav>
-    <div class="navbar text-center" id="menupontok">
-        <a href="../social.html"><i class="fa-solid fa-users"></i><br><p class="mpont_pc">Közösségi média</p></a>
-        <a href="../anime.html"><img id="yui_image" alt=""><br><p class="mpont_pc">Animék</p></a>
-        <a href="../tz-osszefoglalok/index.html"><i class="fa-solid fa-file"></i><br><p class="mpont_pc">TZ összefoglalók</p></a>
-    </div>
     <main>
         <div class="text-center">
-            <h1 id="mh1">Témazáró összefoglalók</h1>
+            <h1 id="mh1">Összefoglalók</h1>
             <h3>Válassz tantárgyat!</h3>
 
             <div class="row" id="tantargyak">
@@ -39,14 +29,15 @@
         </div>
     </main>
     <footer>
-        <h6><span lang="hu">Készítette: Pintér Milán, 2025</span><span lang="en">Created by Milán Pintér, 2025</span></h6>
-        <div class="navbar" id="footer_nav">
-            <a href="" onclick="Settings('on', event)"><i class="fa-solid fa-gear"></i></a>
-            <a href="../contact.html"><i class="fa-solid fa-envelope"></i></a>
-            <a href="../privacy.html"><i class="fa-solid fa-lock"></i></a>
-        </div>
     </footer>
+    <script src="../js/all.js"></script>
     <script>
+        // Navbar betöltése
+        $("nav").html('<a><i class="fa-solid fa-bars fa-2x" onclick="showMenu()" title="Menü"></i></a> <a href="../index.html" id="main_a"><h3 id="n_main">Pntrmln<br> <p id="gh">.hu</p></h3></a> <a><i class="fa-solid fa-language fa-2x" onclick="languageChange()" title="English | Magyar"></i></a>');
+        $("#menupontok").remove();
+        $("nav").after(' <div class="navbar text-center" id="menupontok"> <a href="../social.html"> <i class="fa-solid fa-users"> </i> <br> <p class="mpont_pc"> <span lang="hu">Linkek és kapcsolat</span> <span lang="en">Links and contact</span> </p> </a> <a href="../anime.html"> <img id="yui_image" alt=""> <br> <p class="mpont_pc"> <span lang="hu">Animék</span> <span lang="en">Animes</span> </p> </a> <a href="../tz-osszefoglalok/index.html"> <i class="fa-solid fa-file"> </i> <br> <p class="mpont_pc"> <span lang="hu">Összefoglalók</span> <span lang="en">Exam PDFs</span> </p> </a></div>');        // Footer betöltése
+        $("footer").html('<h6><span lang="hu">Készítette: Pintér Milán, 2025</span><span lang="en">Created by Milán Pintér, 2025</span></h6> <div class="navbar" id="footer_nav"> <a href="" onclick="Settings(&#39;on&#39;, event)"><i class="fa-solid fa-gear"></i></a> <a href="../privacy.html"><i class="fa-solid fa-lock"></i></a> </div>');
+
         $("#yui_image").attr("src", "../media/yui-btn.png");
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
