--- a/social.html
+++ b/social.html
@@ -45,7 +45,7 @@
                     <li onclick="Redir('mail')"><i class="fa-solid fa-envelope fa-2x"></i><br>contact@pntrmln.hu</li>
                     <li onclick="Redir('steam')"><i class="fa-brands fa-steam fa-2x"></i><br>Steam</li>
                     <li onclick="Redir('instagram')"><i class="fa-brands fa-instagram fa-2x"></i><br>Instagram</li>
-                    <li id="last_e" onclick="Redir('bunpro')"><img src="media/bunpro-logo3.png" alt="bunpro-logo"><br>Bunpro</li>
+                    <li id="last_e" onclick="Redir('bunpro')"><img id="bnp" src="media/bunpro-logo3.png" alt="bunpro-logo"><br>Bunpro</li>
                 </ul>
             </div>
         </div>
