--- a/osszefoglalok/tortenelem.html
+++ b/osszefoglalok/tortenelem.html
@@ -76,6 +76,6 @@
     <script src="../js/all.js"></script>
     <script src="tz-osszefoglalok.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="pntrmln" data-description="Support me on Buy me a coffee!" data-message="" data-color="#464646" data-position="Right" data-x_margin="30" data-y_margin="100"></script>
+    <!-- <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="pntrmln" data-description="Support me on Buy me a coffee!" data-message="" data-color="#464646" data-position="Right" data-x_margin="30" data-y_margin="100"></script> -->
 </body>
 </html>
