--- a/anime.html
+++ b/anime.html
@@ -23,7 +23,7 @@
     <link href="https://db.onlinewebfonts.com/c/c37a9f31696dbcc8b86a42827beae565?family=Europa+Grotesk+SH+DemBol" rel="stylesheet">
     <link href="https://db.onlinewebfonts.com/c/e61cf1c1f87623030f2bcb7944003e85?family=MotoyaExOkai+W5" rel="stylesheet">
 </head>
-<body onload="checkSettings()">
+<body onload="window.location.href='construction.html'">
     <nav class="navbar">
     </nav>
     <main>
