--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body onload="checkSettings()"> <!--onload="window.location.href='construction.html'"-->
+<body onload="window.location.href='construction.html'"> <!--onload="window.location.href='construction.html'"-->
     <nav class="navbar">
     </nav>
     <main class="text-center mt-3">
-        <div class="alert alert-warning" id="langalert" role="alert">
+        <p class="alert alert-warning" id="langalert" role="alert">
             <span lang="hu">
                 It looks like you're not Hungarian.<br>
                 You can change the language in the upper right corner!
             </span>
-        </div>
+        </p>
         <h1 id="mh1"><span lang="hu">Üdv az oldalon!</span><span lang="en">Welcome to the site!</span></h1>
         <div class="row mt-5">
             <div class="col" id="rolam-div">
