--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body onload="window.location.href='construction.html'"> <!--onload="window.location.href='construction.html'"-->
+<body onload="checkSettings()"> <!--onload="window.location.href='construction.html'"-->
     <nav class="navbar">
     </nav>
     <main class="text-center mt-3">
