--- a/social.html
+++ b/social.html
@@ -33,8 +33,6 @@
                     <li onclick="Redir('steam')"><i class="fa-brands fa-steam fa-2x"></i><br>Steam</li>
                     <hr style="color: red;">
                     <li onclick="Redir('instagram')"><i class="fa-brands fa-instagram fa-2x"></i><br>Instagram</li>
-                    <hr style="color: red;">
-                    <li onclick="Redir('bunpro')"><img src="media/bunpro-logo3.png" alt="bunpro-logo"><br>Bunpro</li>
                 </ul>
             </div>
             <div id="fuggo_des">
@@ -44,8 +42,7 @@
                     <li onclick="Redir('spotify')"><i class="fa-brands fa-spotify fa-2x"></i><br>Spotify</li>
                     <li onclick="Redir('mail')"><i class="fa-solid fa-envelope fa-2x"></i><br>contact@pntrmln.hu</li>
                     <li onclick="Redir('steam')"><i class="fa-brands fa-steam fa-2x"></i><br>Steam</li>
-                    <li onclick="Redir('instagram')"><i class="fa-brands fa-instagram fa-2x"></i><br>Instagram</li>
-                    <li id="last_e" onclick="Redir('bunpro')"><img id="bnp" src="media/bunpro-logo3.png" alt="bunpro-logo"><br>Bunpro</li>
+                    <li id="last_e" onclick="Redir('instagram')"><i class="fa-brands fa-instagram fa-2x"></i><br>Instagram</li>
                 </ul>
             </div>
         </div>
