--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
     <nav class="navbar">
     </nav>
     <main class="text-center mt-3">
-        <p class="alert alert-warning" id="langalert" role="alert">
-            <span lang="hu">
-                It looks like you're not Hungarian.<br>
-                You can change the language in the upper right corner!
-            </span>
-        </p>
+        <div class="alert alert-warning" id="langalert" role="alert">
+                <p>It looks like you're not Hungarian.<br>
+                You can change the language in the upper right corner!</p>
+        </div>
         <h1 id="mh1"><span lang="hu">Üdv az oldalon!</span><span lang="en">Welcome to the site!</span></h1>
         <div class="row mt-5">
             <div class="col" id="rolam-div">
