--- a/osszefoglalok/index.html
+++ b/osszefoglalok/index.html
@@ -22,8 +22,8 @@
             <h1 id="mh1">Összefoglalók</h1>
             <h3>Válassz tantárgyat!</h3>
 
-            <div class="row" id="tantargyak">
-                <div class="column pt-4 pb-4" id="fcm"><a href="tortenelem.html"><i class="fa-solid fa-swords fa-3x"></i></a><h4>Történelem</h4></div>
+            <div class="row text-center" id="tantargyak">
+                <div class="column pt-4 pb-4"><a href="tortenelem.html"><i class="fa-solid fa-swords fa-3x"></i></a><h4>Történelem</h4></div>
                 <div class="column pt-4 pb-4"><a href="magyar.html"><i class="fa-solid fa-book-open fa-3x"></i></a><h4>Magyar</h4></div>
             </div>
         </div>
