--- a/osszefoglalok/magyar.html
+++ b/osszefoglalok/magyar.html
@@ -30,9 +30,9 @@
         <div class="text-center">
             <h1 id="mh1">Magyar</h1>
         </div>
-        <p class="alert alert-warning" role="alert">
-            Az összefoglalók kikerülésének módja hamarosan megváltozik. További információért kattints&nbsp;<span style="text-decoration: underline;" onclick="window.open('https://github.com/Pntrmln/pntrmln.github.io/blob/main/README.md')"> ide</span>.
-        </p>
+        <div class="alert alert-warning" role="alert">
+            <p>Az összefoglalók kikerülésének módja hamarosan megváltozik. További információért kattints <span style="text-decoration: underline;" onclick="window.open('https://github.com/Pntrmln/pntrmln.github.io/blob/main/README.md')">ide</span>.</p>
+        </div>
         <section class="mt-5 text-center">
             <div class="dropdown" onclick="showDropdown('jtn')">
                 <h4 id="jtnh4">Jelenlegi tanév:<i class="fa-solid fa-caret-down"></i></h4>
@@ -53,7 +53,6 @@
                 </div>
             </div>
         </section>
-        <!-- <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="pntrmln" data-color="#FFDD00" data-emoji="☕"  data-font="Poppins" data-text="Fizess elő az előnyökért!" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script> -->
     </main>
     <footer>
     </footer>
@@ -61,6 +60,5 @@
     <script src="../js/other.js"></script>
     <script src="tz-osszefoglalok.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-    <!-- <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="pntrmln" data-description="Support me on Buy me a coffee!" data-message="asd" data-color="#464646" data-position="Right" data-x_margin="30" data-y_margin="100"></script> -->
 </body>
 </html>
