--- a/osszefoglalok/tortenelem.html
+++ b/osszefoglalok/tortenelem.html
@@ -30,9 +30,9 @@
         <div class="text-center">
             <h1 id="mh1">Történelem</h1>
         </div>
-        <p class="alert alert-warning" role="alert">
-            Az összefoglalók kikerülésének módja hamarosan megváltozik. További információért kattints&nbsp;<span style="text-decoration: underline;" onclick="window.open('https://github.com/Pntrmln/pntrmln.github.io/blob/main/README.md')"> ide</span>.
-        </p>
+        <div class="alert alert-warning" role="alert">
+            <p>Az összefoglalók kikerülésének módja hamarosan megváltozik. További információért kattints <span style="text-decoration: underline;" onclick="window.open('https://github.com/Pntrmln/pntrmln.github.io/blob/main/README.md')">ide</span>.</p>
+        </div>
         <section class="mt-5 text-center" id="fsect">
             <div class="dropdown">
                 <h4 id="jtnh4" onclick="showDropdown('jtn')">Jelenlegi tanév:<i class="fa-solid fa-caret-down"></i></h4>
