--- a/japanese.html
+++ b/japanese.html
@@ -24,10 +24,10 @@
                     <h3><ruby><span lang="hu">A JLPT szintem:</span><span lang="en">My JLPT level:</span><rt>僕のJLPTレベル</rt></ruby></h3>
                     <div class="prog">
                     <p><ruby>Semmi<rt>何も</rt></ruby></p>
-                    <progress value="546" max="1227"></progress>
+                    <progress value="756" max="1227"></progress>
                     <p>N5</p>
                     </div>
-                    <h5 onclick="window.open('https://www.jlpt.jp/e/about/index.html')">
+                    <h5 id="jlpt" onclick="window.open('https://www.jlpt.jp/e/about/index.html')">
                         <ruby><span lang="hu">Mi az a JLPT?</span><span lang="en">What is JLPT?</span><rt>JLPTは何ですか？</rt></ruby>
                     </h5>
                 </div>
@@ -38,7 +38,7 @@
                         <progress value="9" max="12"></progress>
                         <p>12.</p>
                     </div>
-                    <h5 onclick="window.open('https://genki3.japantimes.co.jp/en/intro/')">
+                    <h5 id="genki" onclick="window.open('https://genki3.japantimes.co.jp/en/intro/')">
                         <ruby><span lang="hu">Mi az a Genki?</span><span lang="en">What is Genki?</span><rt>げんきは何ですか？</rt></ruby>
                     </h5>
                 </div>
@@ -61,9 +61,9 @@
                         <rt>僕のプロフィール 日本語とアニメについて</rt>
                     </ruby>
                 </h3>
-                <div id="rbtns">
-                    <button class="std_redir_btn"><img src="media/bunpro-logo3.png" onclick="window.open('https://bunpro.jp/share/Pntrmln')"></button>
-                    <button class="std_redir_btn"><img id="mal" src="media/myanimelist2.svg" onclick="window.open('https://myanimelist.net/profile/Pntrmln')"></button>
+                <div class="row text-center" id="rbtns">
+                    <button class="column pt-4 pb-4 std_redir_btn"><img src="media/bunpro-logo3.png" onclick="window.open('https://bunpro.jp/share/Pntrmln')"></button>
+                    <button class="column pt-4 pb-4 std_redir_btn"><img src="media/myanimelist2_1.svg" onclick="window.open('https://myanimelist.net/profile/Pntrmln')"></button>
                 </div>
             </div>
             <h6 class="mt-5"><span lang="hu">A japán szöveg nagyrészt saját tudás alapján készült.<br>Felhasznált oldalak:</span><span lang="en">The Japanese text is mostly written with my own knowledge.<br>Used sites:</span></h6>
