--- a/osszefoglalok/index.html
+++ b/osszefoglalok/index.html
@@ -25,6 +25,7 @@
             <div class="row text-center" id="tantargyak">
                 <div class="column pt-2"><a href="tortenelem.html"><i class="fa-solid fa-swords fa-3x"></i></a><h4>Történelem</h4></div>
                 <div class="column pt-2"><a href="magyar.html"><i class="fa-solid fa-book-open fa-3x"></i></a><h4>Magyar</h4></div>
+                <div id="sor2" class="column pt-2"><a href="it.html"><i class="fa-solid fa-square-terminal fa-3x"></i></a><h4>Programozás</h4></div>
             </div>
         </div>
     </main>
