--- a/osszefoglalok/tortenelem.html
+++ b/osszefoglalok/tortenelem.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-adsense-account" content="ca-pub-2657039667172408">
     <title>Történelem</title>
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,11 +30,7 @@
             <h1 id="mh1">Történelem</h1>
         </div>
         <div class="alert alert-warning" role="alert">
-            <p>Az összefoglalók kikerülésének módja hamarosan megváltozik. További információért kattints <span style="text-decoration: underline;" onclick="window.open('https://github.com/Pntrmln/pntrmln.github.io/blob/main/README.md')">ide</span>.</p>
-        </div>
-        <br>
-        <div class="alert alert-danger" role="alert">
-            <p>Történelem belső vizsgából NEM lesz összefoglaló.</p>
+            <p>Az összefoglalók kikerülésének módja megváltozott. További információért kattints <span style="text-decoration: underline;" onclick="window.open('https://github.com/Pntrmln/pntrmln.github.io/blob/main/README.md')">ide</span>.</p>
         </div>
         <section class="mt-5 text-center" id="fsect">
             <div class="dropdown">
